fix shitty alignment inside panels

--- a/dashboard/css/app.css
+++ b/dashboard/css/app.css
@@ -1,5 +1,5 @@
 html, body {
-	height: 100%;
+    height: 100%;
 }
 
 .menu ul {
@@ -7,69 +7,79 @@ html, body {
 }
 
 .menu li {
-	list-style: none;
+    list-style: none;
 }
 
 .menu a {
-	color: #222;
-	display: block;
-	font-size: 18px;
-	line-height: 1.8em;
-	padding: 10px;
-	text-decoration: none;
+    color: #222;
+    display: block;
+    font-size: 18px;
+    line-height: 1.8em;
+    padding: 10px;
+    text-decoration: none;
 }
 
 .menu a:hover {
-	color: #666;
+    color: #666;
 }
 
 .websites-container, .pages-container {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 .panel-dashboard {
-	height: 100%;
+    height: 100%;
 }
 
 .site-address {
-	font-size: 18px;
-	margin-bottom: 4px;
+    font-size: 18px;
+    margin-bottom: 4px;
 }
 
 .site-container {
-	height: 50px;
-	margin-bottom: 10px;
+    height: 50px;
+    margin-bottom: 10px;
 }
 
 .site-address {
-	padding-top: 5px;
+    padding-top: 5px;
 }
 
 .site-action {
-	color: #555;
-	font-size: 18px;
-	margin-right: 4px;
+    color: #555;
+    font-size: 18px;
+    margin-right: 4px;
 }
 
 .site-remove:hover {
-	color: #aa0000;
+    color: #aa0000;
 }
 
 .pages-panel-head {
-	height: 40px;
+    height: 40px;
+}
+
+.pages-panel-head button {
+    width: auto;
 }
 
 .btn-sites-dropdown {
-	background-color: #eee;
-	border: 1px solid #ccc;
-	font-weight: bold;
-	margin-left: 5px;
-	padding: 10px 0 10px 0;
-	width: 200px;
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    border-radius: 3px !important;
+    font-weight: bold;
+    margin-left: 5px;
+    padding: 10px 20px 10px 20px;
 }
 
 .logout {
-	float: right;
-	font-size: 16px;
-	margin-top: 15px;
+    float: right;
+    font-size: 16px;
+    margin-top: 15px;
+}
+
+.panel-body .col-lg-4,
+.panel-body .col-lg-6,
+.panel-body .col-lg-12 {
+    padding-left: 5px;
 }
